<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iForward</string>
    <string name="no_data">no data</string>
    <string name="ok">OK</string>
    <string name="cancle">Cancle</string>
    <string name="forward_number">Number</string>
    <string name="forward_object">Object</string>
    <string name="forward_history">History</string>
    <string name="forward_object_default_display">Object(0)</string>
    <string name="tip_no_content">no content</string>
    <string name="tip_no_item_selected">no item selected</string>
    <string name="settings">settings</string>
    <string name="about">About</string>
    <string name="app_intrudoction">Sometimes we don\'t want to answer the phone,and can\'t hang up either,It made us very distressed,But now I got the solution.Just add the phone number in forward number list ,when the number call you,auto hang up and forward to another number that you has set! The most important is free and open source.</string>
    <string name="contact">Contact</string>
    <string name="email">Gmail: tanghly@gmail.com</string>
    <string name="google">Google+: http://gplus.to/hanleytowne</string>
    <string name="twitter">twitter: http://www.facebook.com/hanleytowne</string>
    <string name="facebook">facebook: http://www.facebook.com/hanleytowne</string>
    <string name="weibo">weibo: http://weibo.com/tanghanlin</string>
    <string name="source_code">SourceCode:http://code.google.com/p/iforward/</string>
    <string name="manually_add">manually add</string>
    <string name="transferred_to">transferred to</string>
    <string name="delete">remove</string>
    <string name="export">export</string>
    <string name="clear">clear</string>
    <string name="manually_add_number">manually add number</string>
    <string name="contacts_add_number">load from contacts</string>
    <string name="calllogs_add_number">load from calllogs</string>
    <string name="add_forward_object">who need forward?</string>
    <string name="tip">tip</string>
    <string name="tip_clear">clear history?</string>
    <string name="memo">memo info</string>
    <string name="mobile_tel_num">moble|Landline</string>
    <string name="tip_no_number_settings">not set the number</string>
    <string name="number_settings">number settings</string>
    <string name="disable_forward_number">disable forward function</string>
    <string name="tip_history_export_to">history export to:</string>
    <string name="tip_export_success">export success</string>
    <string name="tip_export_nodata">export no data</string>
    <string name="tip_forward_number_settings">need to set the forward number before start</string>
    <string name="guide">Guide</string>
    <string name="app_start">Enter</string>
     <string name="thanks">Thanks</string>
    <string name="bell_ui_weibo">Bell UI weibo: http://t.qq.com/ccf1229</string>
    <string name="chaoge_weibo">zzc weibo: http://t.qq.com/xm_zzcclp2012</string>
    <string name="thanks_content">Special thanks to the a beautiful UI very patient design interface, and also very grateful to the zcc-brother of my adapter idea certainly, without your support, there would be no "iForward", thank you so so so much!</string>
    
</resources>